<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/nameEdit"
        android:layout_toEndOf="@id/name"
        android:layout_width="200dp"
        android:layout_height="40dp" />
    <TextView
        android:id="@+id/email"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/name"
        android:layout_marginTop="15dp"
        android:gravity="bottom"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toEndOf="@id/email"
        android:layout_marginTop="15dp"
        android:layout_below="@id/nameEdit"/>

    <TextView
        android:id="@+id/mobile"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/email"
        android:layout_marginTop="15dp"
        android:gravity="bottom"
        android:text="@string/mobile"/>
    <EditText
        android:id="@+id/moblileEdit"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toEndOf="@id/email"
        android:layout_marginTop="15dp"
        android:layout_below="@id/emailEdit"/>
    <TextView
        android:id="@+id/mobile2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/mobile"
        android:layout_marginTop="15dp"
        android:gravity="bottom"
        android:text="@string/mobile2"/>
    <EditText
        android:id="@+id/moblileEdit2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toEndOf="@id/email"
        android:layout_marginTop="15dp"
        android:layout_below="@id/moblileEdit"/>
    <TextView
        android:id="@+id/city"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/mobile2"
        android:layout_marginTop="15dp"
        android:gravity="bottom"
        android:text="@string/city"/>
    <EditText
        android:id="@+id/cityEdit"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_toEndOf="@id/email"
        android:layout_marginTop="15dp"
        android:layout_below="@id/moblileEdit2"/>
    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/city"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/kill"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/kill"
        android:layout_below="@id/save"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>